project plan individual

--- a/individualdeliverable1.html
+++ b/individualdeliverable1.html
@@ -113,8 +113,10 @@
     </div>
     <hr class="version">
   </div>
-  <div class="company-btn">
-    <a onclick="window.open('https://drive.google.com/file/d/1QjnaEBBA_qTlO8SRhcUBT_4okBGEDblW/view?usp=sharing')" class="explore-btn">User Research Plan Document</a>
+  <div class="reveal">
+    <div class="company-btn">
+      <a onclick="window.open('https://drive.google.com/file/d/1QjnaEBBA_qTlO8SRhcUBT_4okBGEDblW/view?usp=sharing')" class="explore-btn">User Research Plan Document</a>
+    </div>
   </div>
   </main>
   
