--- a/individualdeliverable3.html
+++ b/individualdeliverable3.html
@@ -27,19 +27,56 @@
   </nav>
   <div class="placeholder"></div>
   <main class="product-main">
-    <section id="welcome" class="product-intro">
-      <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
-      <h1 class="product-heading">PROJECT PLAN</h1>
-      <p class="product-text">DELIVERABLE CONTAINING THE INITIAL PROJECT PLAN AND ANSWERED RESEARCH QUESTIONS.</p>
-    </section>
+  <section id="welcome" class="product-intro">
+    <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
+    <h1 class="product-heading">PROJECT PLAN</h1>
+    <p class="product-text">DELIVERABLE CONTAINING THE INITIAL PROJECT PLAN AND RESEARCH QUESTIONS.</p>
+  </section>
+  <div class="width">
+      <h2 class="guide">INTRO</h2>
+        <p class="desc">
+          This page presents a summary of the project plan and its research questions. The project plan was the starting point of this project, and it documented the plan of approach for the project.
+        </p>
+        <hr class="version">
+    </div>
   <div class="reveal">
-      <div class="width">
-          <h2 class="guide">INTRO</h2>
-              <p class="desc">
-                  This deliverable page presents a summary of the user research plan which has been conducted with users of the portfolio. The page gives a summary of the process which has been taken, from setting up goals to execution. It is suggested to read through this summary first for a better understanding, after which to use the button at the bottom of the page to refer to as the actual proof document.
-              </p>
-          <hr>
-      </div>
+    <div class="width">
+      <h2 class="guide">SCOPE & APPROACH</h2>
+      <p class="desc">In the project approach, four main bulletpoints were tackled. This was done to create a clear overview on what and how things need to be done within this project. These points are as follows:
+        <ul class="target-list">
+          <li>What are you going to do?</li>
+          <li>Why are you going to do it?  (what do you want to learn and or achieve)</li>
+          <li>How are you going to do it?</li>
+          <li>What do you want to deliver in your first project?</li>
+        </ul>
+      </p>
+      <hr class="version">
+    </div>
+  </div>
+  <div class="reveal">
+    <div class="width">
+      <h2 class="guide">RESEARCH QUESTIONS</h2>
+      <p class="desc">For this project, I have a main reseqrch question:
+        <ul class="target-list">
+          <li>Hoe presenteer ik mezelf als professioneel media designer in een helder en gestructureerd portfolio?</li>
+        </ul>
+      </p>
+      <p class="desc">There are also multiple subquestions which have been answered in other deliverables in the portfolio. The subquestions in this project plan are as follows:
+        <ul class="target-list">
+          <li>In which field is my ICT expertise?</li>
+          <li>How do I wish to present myself as a professional media designer?</li>
+          <li>How will I bring forward my expertise in my portfolio?</li>
+          <li>How might a front-end framework assist me in setting up my portfolio?</li>
+          <li>How am I going to create a user-friendly portfolio?</li>
+        </ul>
+      </p>
+      <hr class="version">
+    </div>
+  </div>
+  <div class="reveal">
+    <div class="company-btn">
+      <a onclick="window.open('https://drive.google.com/file/d/199k7vlDhp_-zG2qPpsw5Jk3Tiwn9t-KG/view?usp=sharing')" class="explore-btn">Project Plan Document</a>
+    </div>
   </div>
   </main>
   
