--- a/individualdeliverable4.html
+++ b/individualdeliverable4.html
@@ -108,8 +108,10 @@
           <hr class="version">
         </div>
       </div>
-      <div class="company-btn">
-        <a onclick="window.open('https://drive.google.com/file/d/1FA3AT8jZPo3y8uaHIXO28-XZpNmlGurg/view?usp=sharing')" class="explore-btn">Front-end Framework Resarch Document</a>
+      <div class="reveal">
+        <div class="company-btn">
+          <a onclick="window.open('https://drive.google.com/file/d/1FA3AT8jZPo3y8uaHIXO28-XZpNmlGurg/view?usp=sharing')" class="explore-btn">Front-end Framework Resarch Document</a>
+        </div>
       </div>
     </div>
   </main>
