--- a/homepage.html
+++ b/homepage.html
@@ -245,7 +245,7 @@
                     </section>                        
                 </div>
                 <div onclick="window.open('international.html')" class="project" style="cursor: pointer;">
-                    <img src="./images/hongkong.jpg" alt="" class="grid-img">
+                    <img src="./images/ddw.jpg" alt="" class="grid-img">
                     <section class="project-info">
                         <h1 class="projectname">International Project</h1>
                     </section>                        
