--- a/homepage.html
+++ b/homepage.html
@@ -17,6 +17,9 @@
         <div class="logo">
             <a href="#welcome"><img src="images/LogoTijn.png"></a>
         </div>
+        <a class="competence" href="#competence">
+            <button class="explore">VIEW PROOF</button>
+        </a>
         <div class="toggle-button" href="#" id="menu">
             <span class="bar1"></span>
             <span class="bar2"></span>
@@ -46,15 +49,15 @@
                 <h2 class="guide-title">SEMESTER 7: PORTFOLIO</h2>
                 <p class="desc">
                     Welcome to my Semester 7 Portfolio for Advanced Media Design! This portfolio will take you through the learning course I have taken throughout the semester. This semester has three main projects worth noting.
-                    These projects are defined below the reading guide you are currently reading. Every project has a dedicated reading guide, which is accessible directly when opening their page. These reading guides are more in-depth on its corresponding project, while this reading guide showcases a more general guideline of the semester. While there are the three main projects, I have also worked on personal projects, which are also visible as a separate project next to the other three projects..
+                    These projects are defined below the reading guide you are currently reading. Each project has a dedicated reading guide, which is accessible directly when opening their pages. These reading guides are more in-depth on its corresponding project, while this introduction showcases a more general guideline of the semester. While there are the three main projects, I have also worked on personal projects, which are also visible as a separate project next to the other three projects.
                 </p>
                 <div class="column">
                     <p class="company">
-                        The topics which you can further thoroughly expect while reading this reading guide are the expectations I had, how I approached and how I reflect on the semester. Furthermore, there is a 
-                        <a class="menu-link line" href="#competence">competence table</a> at the bottom of the reading guide showcasing the deliverables proving of all of the <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">FHICT competencies</a>.
+                        The topics which you can further thoroughly expect while reading this introduction are the expectations I had, how I approached and how I reflect on the semester. Furthermore, there is a 
+                        <a class="menu-link line" href="#competence">competence table</a> at the bottom of this text showcasing the deliverables proving of all of the <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">FHICT competencies</a>.
                     </p>
                     <p class="company">
-                        This reading guide will also touch on my professionalism as a media designer. This implies in which sector I see myself in the professional workfield.  Throughout the portfolio, it is highly noticeable how this professional side of me makes itself visible within the deliverables.
+                        This reading guide will also touch on my professionalism as a media designer. This implies in which sector I see myself in the professional workfield.  Throughout the portfolio, it is noticeable how this professional side of me makes itself visible within the deliverables.
                         Read more about my professional side in <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">this</a> part of the reading guide.
                     </p>
                 </div>
@@ -65,7 +68,7 @@
             <div class="width">
                 <h2 class="guide">EXPECTATIONS</h2>
                 <p class="desc">
-                    Going into this semester, I already had the idea that it would be a very research driven semester. This would mean that lectures were not a regular thing. This was still new to be, since most of my semester have been course-based. My expectation was that I still had to get used to this factor. 
+                    Going into this semester, I already had the idea that it would be a very research driven semester. This would mean that lectures were not a regular thing. This was still new to be, since most of my semesters have been course-based. Hence why one of my expectations was that I still had to get used to this factor. 
                 </p>
                 <div class="column">
                     <p class="company">
@@ -88,14 +91,14 @@
             <div class="width">
                 <h2 class="guide">APPROACH</h2>
                 <p class="desc">The semester started with the individual project. This was where the foundation of the portfolio started. The project lasted three weeks, and during these three weeks user research had been done, and a base for the portfolio had been set up. 
-                    By having a solid start, I was able to expand my portfolio during the course of the semester while other projects were starting. 
+                    By having a solid start, I was able to expand my portfolio during the course of the semester while other projects were simultaneously running. 
                 </p>
                 <p class="desc">
                     Right after the individual project ended, a start was made on the group project. The group project consisted out of me and five other (Dutch) students. The group project would last until the end of the semester. 
                     During the group project, teamwork was the most prominent aspect, which helped us to deliver a solid end product. 
                 </p>
                 <p class="desc">
-                    While working on the group project, there was also international aspects interfering simultaneously. Firstly, there was the Dutch Design Week during the start of the group project, where international students from Toronto visited. Secondly, there was the WeyWeyWeb conference in Malaga right before December. These would cause for international collaboration which would account for the international project. 
+                    While working on the group project, there were also international aspects interfering simultaneously. Firstly, there was the Dutch Design Week during the start of the group project, where international students from Toronto visited. Secondly, there was the WeyWeyWeb conference in Malaga right before December. These would cause for international collaboration which would account for the international project. 
                 </p>
                 <p class="desc">
                     Lastly, there is also a personal section which I have worked on during the final few weeks of the semester. Group project still had priority, which caused the deliverables of the personal project to be considered as an add-on to the portfolio.
@@ -119,11 +122,15 @@
                 <p class="desc">
                     In this portfolio, you will be able to see how I apply my dedication for UX in my deliverables. During my graduation internship, I am planning to apply the additional knowledge I gained during this semester, which will support me to graduate with succession.
                 </p>
+                <p class="desc">
+                    Below I present the competence table, which contains all of the proof for this semester. The deliverables are all linked to the learning outcomes, and these deliverables can be accessed directly from this table. If you wish to receive more information on specific projects of this semster,
+                    please scroll down further, where you are able to see the different projects, and access their reading guides by opening them.
+                </p>
                 <hr>
             </div>
         </div>
         <div class="reveal">
-            <div class="width">
+            <div id="competence" class="width">
                 <h2 id="competence" class="guide">COMPETENCE TABLE</h2>
                 <table>
                     <tr>
