--- a/individualdeliverable1.html
+++ b/individualdeliverable1.html
@@ -62,7 +62,7 @@
         <h2 class="guide">TARGET GROUP</h2>
         <p class="desc">
           The target group for this project are mainly teachers/assessors. Since the portfolio acts as the big piece of evidence of what I have done this semester, assessors need to be able to access my work easily with this portfolio.
-          This is of course the intended target group, but the target group has been confirmed with the help of the execution of this research plan. Several persona's have been set up to clarify who the end user of this portfolio will be:
+          This is of course the intended target group, but the target group has been confirmed with the help of the execution of this research plan.
         </p>
         <hr class="version">
     </div>
@@ -98,13 +98,20 @@
   </div>
   <div class="reveal">
     <div class="width">
-      <h2 class="guide">NEXT STEPS</h2>
+      <h2 class="guide">EVALUATION & NEXT STEPS</h2>
+      <p class="desc">
+        After having conducted my research plan with several users, I noticed that the task-based usability mehod was unnecessary. While making use of the contextual inquiry, all of the users who tested the portfolio already fulfilled the tasks I was planning to give during the task-based usability test afterwards. This unfortunately meant that I had accounted for extra time which was not needed.
+      </p>
+      <p class="desc">
+        Referring back to the research question I initially planned to answer, I have received feedback from all of the users to iterate on my portfolio to create an end portfolio which is user-friendly.
+      </p>
       <p class="desc">
         After conducting my research plan with several users, I analyzed the gathered results. These results will help me to iterate on my <a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">designs</a>. These are mainly small design choice changes, but when I will start developing I will still have update meetings. During these meetings, I aim to receive advice on how to achieve the final goal I am aiming for.
       </p>
       <p class="desc">
         The validated design for my portfolio will then be used for the start of the development. By having created the designated style and structure in these wireframes and mockups, the start of the development process is straightforward. The result of this deliverable caused for the following action list:
         <ul class="target-list">
+          <li>Make use of only necessary research methods for the user research plan in the group project.</li>
           <li>Create iterations on the design based on the results of the user research plan.</li>
           <li>Start with development of portfolio with the help of previously created portfolio.</li>
           <li>Keep asking for feedback on additional features when necessary.</li>
