--- a/homepage.html
+++ b/homepage.html
@@ -240,7 +240,7 @@
         <div class="reveal">
             <div class="containerproject" >
                 <div onclick="window.open('individual.html')" class="project" style="cursor: pointer;">
-                    <img src="./images/individual.png" alt="" class="grid-img">
+                    <img src="./images/personal.gif" alt="" class="grid-img">
                     <section class="project-info">
                     <h1 class="projectname">Individual Project</h1>
                     </section>
@@ -258,7 +258,7 @@
                     </section>                        
                 </div>
                 <div onclick="window.open('personal.html')" class="project" style="cursor: pointer;">
-                    <img src="./images/hongkong.jpg" alt="" class="grid-img">
+                    <img src="./images/personal.gif" alt="" class="grid-img">
                     <section class="project-info">
                         <h1 class="projectname">Personal Project</h1>
                     </section>                        
