--- a/individualdeliverable8.html
+++ b/individualdeliverable8.html
@@ -30,16 +30,33 @@
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
       <h1 class="product-heading">PORTFOLIO ITERATIONS</h1>
-      <p class="product-text">DELIVERABLE CONTAINING DOCUMENTATION ON ITERATIONS THAT HAVE BEEN DURING THE COURSE OF DEVELOPMENT OF THE PORTFOLIO.</p>
+      <p class="product-text">DELIVERABLE CONTAINING ITERATIONS THAT HAVE BEEN MADE DURING THE COURSE OF DEVELOPMENT OF THE PORTFOLIO.</p>
     </section>
     <div class="width">
         <h2 class="guide">ITERATION 1</h2>
         <p class="desc">
-          I used Figma for my entired designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+          After starting development of my portfolio, I have made several iterations on the aesthetic and functionality of the portfolio. Unfortunately, these changes had not been validated with actual users, but by making use of the <a class="menu-link line" href="https://www.nngroup.com/articles/ten-usability-heuristics/" target="_blank" rel="noopener noreferrer">ten usability heuristics</a> (10 Usability Heuristics for User Interface Design, n.d.), I was able to conclude that these changes add more depth to the portfolio. 
         </p>
+        <p class="desc">The first iteration that had been made is a triangular background on the homepage. This background looks as follows:</p>
         <div class="company">
-          <img class="deliverable" src="./images/figma.png">
+          <img class="deliverable" src="./images/colorkit.png">
         </div>
+        <p class="desc">The triangular pattern was chosen because because they are versatile and can create a variety of looks. They can be used to add a sense of dimension to a room, make a statement, or simply add a touch of elegance (Wallpaper Kenya, 2024). 
+        </p>
+        <hr class="version">
+        <h2 class="guide">ITERATION 2</h2>
+        <p class="desc">The second iteration that was made, was by adding more buttons on the landing screen. These additional buttons were for accessing the projects and the proof table. The button for the proof table was attached to the navbar, for ease of access to the proof of the portfolio, since this was preferred by my semester coach.</p>
+        <div class="company">
+          <img class="deliverable" src="./images/homepage.png">
+        </div>
+        <hr class="version">
+        <h2 class="guide">REFERENCES</h2>
+        <p class="desc">
+          10 Usability heuristics for user interface design. (n.d.). Nielsen Norman Group. https://www.nngroup.com/articles/ten-usability-heuristics/
+        </p>
+        <p class="desc">
+          Wallpaper Kenya. (2024, January 5). triangle pattern wallpaper - ​Call: +254741889754 Wallpaper Kenya. ​Call: +254741889754 Wallpaper Kenya. https://wallpaperkenya.co.ke/product/triangle-pattern-wallpaper/#:~:text=Triangle%20patterns%20are%20a%20popular,add%20a%20touch%20of%20elegance.
+        </p>
         <hr class="version">
     </div>
   </main>
