proof sectie voor de projecten

--- a/individual.html
+++ b/individual.html
@@ -149,6 +149,73 @@
             <hr>
         </div>
     </div>
+    <div class="reveal">
+      <div class="width">
+        <section class="proof" id="proof">
+          <div class="proof-content">
+            <div class="row">
+              <img src="./images/personal.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>lol</h2>
+                </div>
+                <h3>lolol</h3>
+              </div>
+            </div>
+            
+            <div class="row">
+              <img src="./images/personal.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>lol</h2>
+                </div>
+                <h3>lolol</h3>
+              </div>
+            </div>            
+            
+            <div class="row">
+              <img src="./images/personal.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>lol</h2>
+                </div>
+                <h3>lolol</h3>
+              </div>
+            </div>
+
+            <div class="row">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>lol</h2>
+                </div>
+                <h3>lolol</h3>
+              </div>
+            </div>
+
+            <div class="row">
+              <img src="./images/personal.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>lol</h2>
+                </div>
+                <h3>lolol</h3>
+              </div>
+            </div>
+
+            <div class="row">
+              <img src="./images/personal.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>lol</h2>
+                </div>
+                <h3>lolol</h3>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
   </main>
 
   <footer class="footer">
