--- a/individualdeliverable8.html
+++ b/individualdeliverable8.html
@@ -33,6 +33,14 @@
       <p class="product-text">DELIVERABLE CONTAINING ITERATIONS THAT HAVE BEEN MADE DURING THE COURSE OF DEVELOPMENT OF THE PORTFOLIO.</p>
     </section>
     <div class="width">
+      <h2 class="guide">INTRO</h2>
+      <p class="desc">
+        After having finished conducting my user research plan, and started development on my portfolio, I still was not entirely satisfied with the look of my portfolio. The related research question to this deliverable is:
+        <ul class="target-list">
+          <li>Hoe kan ik een gebruiksvriendelijke portfolio opstellen, waardoor de gebruiker niet zelf naar informatie hoeft te zoeken?</li>
+        </ul>
+      </p>
+      <hr class="version">
         <h2 class="guide">ITERATION 1</h2>
         <p class="desc">
           After starting development of my portfolio, I have made several iterations on the aesthetic and functionality of the portfolio. Unfortunately, these changes had not been validated with actual users, but by making use of the <a class="menu-link line" href="https://www.nngroup.com/articles/ten-usability-heuristics/" target="_blank" rel="noopener noreferrer">ten usability heuristics</a> (10 Usability Heuristics for User Interface Design, n.d.), I was able to conclude that these changes add more depth to the portfolio. 
