deliverables toegevoegd aan de project paginas shizzle

--- a/group.html
+++ b/group.html
@@ -138,7 +138,7 @@
               </ul> 
             </p>
             <hr>
-        </div>
+      </div>
     </div>
     <div class="reveal">
         <div class="width">
@@ -149,6 +149,142 @@
             </p>
             <hr>
         </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <section class="proof" id="proof">
+          <div class="proof-content">
+            <div class="row">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>User Testing Plan</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-1</h3>
+                  <h3>LO-2</h3>  
+                  <h3>LO-5</h3>  
+                </div>
+              </div>
+            </div>
+            
+            <div class="row">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Design Contribution</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-1</h3>
+                  <h3>LO-2</h3>  
+                  <h3>LO-3</h3>  
+                </div>          
+              </div>
+            </div>            
+            
+            <div class="row">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Research Methods Research</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-2</h3>
+                  <h3>LO-5</h3>  
+                </div>            
+              </div>
+            </div>
+
+            <div class="row">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Project Plan</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-4</h3>
+                </div>          
+              </div>
+            </div>
+
+            <div class="row">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Proof of Concepts</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-3</h3>  
+                </div>               
+              </div>
+            </div>
+
+            <div class="row">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>The Scrum Master</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-4</h3>
+                  <h3>LO-6</h3>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Personas</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-1</h3>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>(Personal) Evaluation and Reflection</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-6</h3>
+                  <h3>LO-7</h3>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Methods and Tooling</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-6</h3>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Update Presentation</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-6</h3>
+                  <h3>LO-7</h3>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </section>
+      </div>
     </div>
   </main>
 
