--- a/homepage.html
+++ b/homepage.html
@@ -168,7 +168,7 @@
                         <td>Learning Outcome 3: Software design and realisation</td>
                         <td>
                             <ul class="proof">
-                                <li><a class="menu-link line" href="individualdeliverable7.html" target="_blank" rel="noopener noreferrer">Individual Project: C4 Model</a></li>
+                                <li><a class="menu-link line" href="individualdeliverable7.html" target="_blank" rel="noopener noreferrer">Individual Project: Portfolio Development</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">Individual Project: Wireframes and Mockups</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable5.html" target="_blank" rel="noopener noreferrer">Group Project: Proof Of Concepts</a></li>
@@ -194,6 +194,7 @@
                         <td>Learning Outcome 5: Investigative problem solving</td>
                         <td>
                             <ul class="proof">
+                                <li><a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable4.html" target="_blank" rel="noopener noreferrer">Individual Project: Front-End Framework Research</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Reading Guide Document</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable3.html" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
