--- a/individual.html
+++ b/individual.html
@@ -154,32 +154,42 @@
         <section class="proof" id="proof">
           <div class="proof-content">
             <div class="row">
-              <img src="./images/personal.gif" alt="">
+              <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
-                  <h2>lol</h2>
+                  <h2>User Research Plan</h2>
                 </div>
-                <h3>lolol</h3>
+                <div class="learningoutcome">
+                  <h3>LO-1</h3>
+                  <h3>LO-2</h3>  
+                  <h3>LO-5</h3>  
+                </div>
               </div>
             </div>
             
             <div class="row">
-              <img src="./images/personal.gif" alt="">
+              <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
-                  <h2>lol</h2>
+                  <h2>Wireframes and Mockups</h2>
                 </div>
-                <h3>lolol</h3>
+                <div class="learningoutcome">
+                  <h3>LO-1</h3>
+                  <h3>LO-2</h3>  
+                </div>          
               </div>
             </div>            
             
             <div class="row">
-              <img src="./images/personal.gif" alt="">
+              <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
-                  <h2>lol</h2>
+                  <h2>Project Plan</h2>
                 </div>
-                <h3>lolol</h3>
+                <div class="learningoutcome">
+                  <h3>LO-4</h3>
+                  <h3>LO-5</h3>  
+                </div>            
               </div>
             </div>
 
@@ -187,29 +197,61 @@
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
-                  <h2>lol</h2>
+                  <h2>Portfolio Development</h2>
                 </div>
-                <h3>lolol</h3>
+                <div class="learningoutcome">
+                  <h3>LO-3</h3>
+                </div>          
               </div>
             </div>
 
             <div class="row">
-              <img src="./images/personal.gif" alt="">
+              <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
-                  <h2>lol</h2>
+                  <h2>Portfolio Iterations</h2>
                 </div>
-                <h3>lolol</h3>
+                <div class="learningoutcome">
+                  <h3>LO-1</h3>
+                  <h3>LO-2</h3>  
+                </div>               
               </div>
             </div>
 
             <div class="row">
-              <img src="./images/personal.gif" alt="">
+              <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
-                  <h2>lol</h2>
+                  <h2>Front-End Framework Research</h2>
                 </div>
-                <h3>lolol</h3>
+                <div class="learningoutcome">
+                  <h3>LO-5</h3>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Personal Evaluation and Reflection</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-6</h3>
+                  <h3>LO-7</h3>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Methods and Tooling</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-6</h3>
+                </div>
               </div>
             </div>
           </div>
